2010-08-17 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-reader.c (read_done_profile_split_exec):
	Only try to split a non-null command.

2010-08-16 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/Makefile.am: Fix PDF build.

	* configure.ac: Bump version number after unstable release.

	* doc/nact/Makefile.am:	Fix manuals cleanup.

	* src/core/na-icontext.c (is_candidate_for_schemes):
	Remove wrong variable override.

	* configure.ac: Bump version number after unstable release.

2010-08-15 Pierre Wieser <pwieser@trychlos.org>

	* data/actions/Makefile.am:
	* data/actions/my-first-na-action.desktop:
	* data/actions/my-first-na-menu.desktop:
	* data/actions/open-terminal-here.desktop:
	* data/actions/show-na-parameters.desktop: New files.

	* data/gconf-schemas/Makefile.am:
	Install GConf schemas in PKGDATADIR/gconf-schemas.

	* NEWS: Update NEWS before unstable release.

	Create a new data/actions subdirectory.

	* configure.ac:
	* data/Makefile.am: Updated accordingly.

	* data/actions/Makefile.am:
	* data/actions/README: New files.

	Move schemas into a new subdirectory data/gconf-schemas.

	* configure.ac:
	* data/Makefile.am: Updated accordingly.

	Move exports/ subdirectory into data/ tree.

	* configure.ac:
	* data/Makefile.am: Updated accordingly.

	* data/exports/Makefile.am:
	* data/exports/README: New files.

	* doc/nact/Makefile.am:	Fix PDF installation.

	* src/core/na-object-profile.c (convert_pre_v3_parameters_str):
	%f used to be the name of the file (a basename), converts it to %b.

2010-08-13 Pierre Wieser <pwieser@trychlos.org>

	* doc/api/nautilus-actions-sections.txt:
	* doc/api/nautilus-actions-docs.xml: New files.

	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_set_locale_string):
	Write all available locales to have a chance another locale can get it.

	* Makefile.am:
	Build doc after src so that libraries are available when documenting them.

	* autogen.sh:
	* configure.ac: Implement gtk-doc and manuals generation.