@@ -1,5 +1,8 @@
 2010-08-17 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/core/na-core-utils.c (na_core_utils_str_split_first_word):
+	Accepts null or empty input string or output pointers.
+
 	* src/io-desktop/nadp-reader.c (read_done_profile_split_exec):
 	Only try to split a non-null command.
 
